--- a/index.html
+++ b/index.html
@@ -62,7 +62,22 @@
 
       <!-- Gallery Grid -->
     <div id="gallery" class="gallery"></div>
+
+    <!-- To-Do List Section -->
+    <h2>To-Do List</h2>
+    <div id="todo-section">
+      <input type="text" id="todo-input" placeholder="Add a task...">
+      <button id="add-btn">Add</button>
+      <ul id="todo-list"></ul>
     </div>
+
+    <!-- Daily Notes Section -->
+    <h2>Daily Notes</h2>
+    <div id="notes-section">
+      <textarea id="daily-notes" placeholder="Write your notes here..."></textarea><br>
+      <button id="save-notes-btn">Save Notes</button>
+    </div>
+  </div>
 
 
     <!-- Games Page -->
