Update logo image source path in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- App Header -->
   <header class="banner">
     <div class="logo-title">
-      <img id="logo" src="images/memorylanelogo.png">
+      <img id="logo" src="memorylanelogo.png">
     </div>
     <h1 id="title"><b>Memory Lane</b></h1>
 
