Update image paths to relative URLs

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- App Header -->
   <header class="banner">
     <div class="logo-title">
-      <img id="logo" src="images/memorylanelogo.png">
+      <img id="logo" src="./memorylanelogo.png">
     </div>
     <h1 id="title"><b>Memory Lane</b></h1>
 
@@ -154,13 +154,13 @@
         
         <div id="home-screen">
           <button class="level-btn" data-level="1">
-            <img src="images/easy.png" alt="Level 1" />
+            <img src="./easy.png" alt="Level 1" />
           </button>
           <button class="level-btn" data-level="2">
-            <img src="images/medium.png" alt="Level 2" />
+            <img src="./medium.png" alt="Level 2" />
           </button>
           <button class="level-btn" data-level="3">
-            <img src="images/hard.png" alt="Level 3" />
+            <img src="./hard.png" alt="Level 3" />
           </button>
         </div>
 
