Add preload attribute to background music audio tag

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <button id="textToggle">Large Text</button>
   </div>
 
-  <audio id="bgMusic"></audio>
+  <audio id="bgMusic" preload="auto"></audio>
 
   <!-- Main App Content -->
   <div id="hovers">
